RESOLVED FIXED297265
WTF assertions need to use C compliant assembly
https://bugs.webkit.org/show_bug.cgi?id=297265
Summary WTF assertions need to use C compliant assembly
adrian_taylor
Reported 2025-08-12 02:10:08 PDT
Parts of wtf/Assertions.h are available in non C++ contexts and in some downstream consumers of WebKit are not compiled with GNU extensions, so these parts must not use 'asm' but instead '__asm__'. This problem has become apparent due to the use of clang modules which compile the entire file to an AST and thus reveal compilation errors even if these macros are not actually used.
Attachments
adrian_taylor
Comment 1 2025-08-12 02:10:09 PDT
adrian_taylor
Comment 2 2025-08-12 02:12:17 PDT
EWS
Comment 3 2025-08-13 13:57:50 PDT
Committed 298649@main (2b1e2b76fea8): <https://commits.webkit.org/298649@main> Reviewed commits have been landed. Closing PR #49264 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.