WTF assertions need to use C compliant assembly https://bugs.webkit.org/show_bug.cgi?id=297265 rdar://157617570

Reviewed by Yusuke Suzuki, Mark Lam, and Elliott Williams.

Moves from asm to __asm__ for parts of this file which may be used in
non-C++ contexts where GNU extensions are not enabled.

* Source/WTF/wtf/Assertions.h:

Canonical link: https://commits.webkit.org/298649@main